<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="menu_action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_action_search"
        app:ActionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/menu_action_sort"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_action_sort_by_name"
                android:title="@string/menu_action_sort_by_name" />

            <item
                android:id="@+id/menu_action_sort_by_date"
                android:title="@string/menu_action_sort_by_date" />

        </menu>

    </item>

    <item
        android:id="@+id/menu_action_hide_completed"
        android:checkable="true"
        android:title="@string/menu_action_hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_delete_completed"
        android:title="@string/menu_action_delete_completed"
        app:showAsAction="never" />

</menu>